:sparkles: Integrate the delete REDCap data endpoint of tofhir-redcap service
